fix: buttons on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -370,7 +370,12 @@ iframe#yt{
 }
 /* btn typ */
 .btns .btn{
-    margin-right: 10px;
+    margin-bottom: 20px;
+}
+@media (min-width: 700px) {
+    .btns .btn{
+        margin-right: 10px;
+    }
 }
 @media (min-width: 1300px) {
     .btns .btn{
@@ -385,6 +390,7 @@ iframe#yt{
 }
 a.btn{
     background-image: linear-gradient(220deg, #99c33b, #c4d730);
+    display: block;
     padding: 10px 20px;
     border-radius: 25px;
     color: #222218;
